[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menus/lan/lan_races_menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/screen.png" type="Texture" id=2]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_normal.tres" type="StyleBox" id=4]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_disable.tres" type="StyleBox" id=6]

[sub_resource type="DynamicFont" id=1]

size = 64
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 3 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Menu" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -120 )
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 388.0
margin_top = 122.0
margin_right = 894.0
margin_bottom = 204.0
rect_rotation = -0.0925835
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Choose Mode"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Client" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_top = 320.0
margin_right = 764.0
margin_bottom = 405.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Client"
flat = false
align = 1

[node name="Server" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 515.0
margin_top = 449.0
margin_right = 764.0
margin_bottom = 534.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Server"
flat = false
align = 1

[node name="Back" type="Button" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_top = 579.0
margin_right = 765.0
margin_bottom = 664.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[node name="Middle" type="Line2D" parent="." index="5"]

visible = false
points = PoolVector2Array( 640, -46.1521, 640, 764.92 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 257786927
sharp_limit = 2.0
round_precision = 8
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera2D" parent="." index="6"]

position = Vector2( 640, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="pressed" from="Client" to="." method="_on_client"]

[connection signal="pressed" from="Server" to="." method="_on_server"]

[connection signal="pressed" from="Back" to="." method="_on_back"]


